# gqrp

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
docs/: STATE.md  architecture.md  decisions.md  prior-art.md  roadmap.md  spec.md
gqrp/: __init__.py  config.py
gqrp/data/: __init__.py  binance_source.py  coingecko.py  lifecycle.py  ohlcv.py  types.py  universe.py
gqrp/discipline/: __init__.py  holdout_guard.py  windows.py
gqrp/gates/: __init__.py  economic.py  statistical.py  verdict.py
gqrp/metrics/: __init__.py  panel.py
gqrp/registry/: __init__.py  client.py  schema.sql  server.py  types.py
scripts/: __init__.py  build_universe.py
tests/: test_binance_source.py  test_build_universe.py  test_coingecko.py  test_discipline.py  test_gates.py  test_integration_binance.py  test_lifecycle.py  test_metrics.py  test_ohlcv.py  test_registry.py  test_types.py  test_universe.py
